# homeboy

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  build.rs  dist-manifest.json  dist-workspace.toml  homeboy.json
crates/homeboy-agents/: Cargo.toml
crates/homeboy-agents-contract/: Cargo.toml
crates/homeboy-agents-contract/src/: lib.rs
crates/homeboy-agents/src/: agent_task_aggregate.rs  agent_task_artifacts.rs  agent_task_batch.rs  agent_task_candidate_baseline.rs  agent_task_config_materialization.rs  agent_task_contract.rs  agent_task_cook_loop.rs  agent_task_deterministic_loop.rs  agent_task_dispatch_plan.rs  agent_task_dispatch_service.rs  agent_task_executor_evidence.rs  agent_task_fanout.rs  agent_task_finalization.rs  agent_task_gate.rs  agent_task_gate_executor.rs  agent_task_loop_definition.rs  agent_task_prompts.rs  agent_task_provider.rs  agent_task_repo_loop_compile.rs  agent_task_review_dossier.rs  agent_task_runtime_dependency_graph.rs  agent_task_schedule.rs  agent_task_secrets.rs  agent_task_timeout_artifacts.rs  agent_tasks.rs  agent_tool_control_plane.rs  api_jobs_terminal_recovery.rs  controller_runtime.rs  controller_scratch.rs  lib.rs  lifecycle_store.rs
crates/homeboy-agents/tests/: agent_task_handoff_reconnect.rs  durable_promotion.rs
crates/homeboy-audit-contract/: Cargo.toml
crates/homeboy-audit-contract/src/: audit_test.rs  detector_profile.rs  finding.rs  finding_kind.rs  fingerprint.rs  lib.rs  phase_timing.rs  result.rs
crates/homeboy-cli/: Cargo.toml  build.rs
crates/homeboy-cli-contract/: Cargo.toml
crates/homeboy-cli/src/: cli_runtime.rs  command_contract.rs  lib.rs  main.rs  tty.rs
crates/homeboy-code-audit/: Cargo.toml
crates/homeboy-code-audit/src/: audit_runtime_regression_test.rs  baseline.rs  checks.rs  codebase_map.rs  comment_blocks.rs  comment_hygiene.rs  compare.rs  compiler_warning_provider.rs  component_provider.rs  dead_code.rs  descriptor_runtime.rs  duplication.rs  engine.rs  entry.rs  execution_plan.rs  extension_manifests.rs  findings.rs  fingerprint.rs  fingerprint_script_provider.rs  fixability_provider.rs  grammar_source_provider.rs  idiomatic.rs  impact.rs  lib.rs  naming.rs  reference.rs  report.rs  report_test.rs  requirements.rs  run.rs  run_test.rs  shadow_modules.rs  signature_extraction.rs  test_mapping.rs  test_quality.rs  types.rs  walker.rs
crates/homeboy-core/: Cargo.toml  build.rs
crates/homeboy-core/src/: activity.rs  agent_runtime_manifest.rs  agent_task.rs  agent_task_aggregate.rs  agent_task_artifacts.rs  agent_task_batch.rs  agent_task_candidate_baseline.rs  agent_task_config_materialization.rs  agent_task_contract.rs  agent_task_cook_loop.rs  agent_task_deterministic_loop.rs  agent_task_dispatch_plan.rs  agent_task_dispatch_service.rs  agent_task_executor_evidence.rs  agent_task_fanout.rs  agent_task_finalization.rs  agent_task_gate.rs  agent_task_gate_executor.rs  agent_task_loop_definition.rs  agent_task_loop_runner_policy.rs  agent_task_prompts.rs  agent_task_provider.rs  agent_task_repo_loop_compile.rs  agent_task_review_dossier.rs  agent_task_runtime_dependency_graph.rs  agent_task_schedule.rs  agent_task_secret_provider.rs  agent_task_secrets.rs  agent_task_timeout.rs  agent_tasks.rs  agent_tool_control_plane.rs  artifact_address.rs  artifact_contract.rs  artifact_dom_boxes.rs  artifact_inputs.rs  artifact_links.rs  artifact_manifest.rs  artifact_metadata.rs  artifact_origin.rs  artifact_postprocess.rs  (+114 more)
crates/homeboy-core/tests/: agent_task_handoff_reconnect.rs  durable_promotion.rs  module_settings.rs
crates/homeboy-engine-primitives/: Cargo.toml
crates/homeboy-engine-primitives/src/: artifact_ref_scheme.rs  baseline.rs  canonical_json.rs  command.rs  edit_op.rs  edit_op_apply.rs  git_changes.rs  identifier.rs  language.rs  lib.rs  local_files.rs  shell.rs  test_path.rs  text.rs  validation.rs
crates/homeboy-error/: Cargo.toml
crates/homeboy-error/src/: help.rs  lib.rs  registry.rs
crates/homeboy-extension/: Cargo.toml
crates/homeboy-extension-contract/: Cargo.toml
crates/homeboy-extension-contract/src/: bench_artifact.rs  bench_diagnostics.rs  bench_gate.rs  bench_responsiveness.rs  bench_result.rs  bench_results.rs  ci_context.rs  extension_contract_producer.rs  fuzz_config.rs  lib.rs  lint_results.rs  manifest.rs  manifest_action_config.rs  manifest_capabilities.rs  manifest_capability_config.rs  manifest_deploy_config.rs  notification_transport_config.rs  runner_contract.rs  sidecar_config.rs  source_metadata_repair.rs  test_analysis.rs  test_parsing.rs  test_result.rs  test_results.rs  test_workflow.rs  trace_preview.rs  update_output.rs  version.rs
crates/homeboy-extension/src/: audit_compiler_warning_provider.rs  audit_fingerprint_script_provider.rs  audit_grammar_source_provider.rs  audit_manifest_provider.rs  capability.rs  compiler_warning_contract.rs  component_script.rs  env_provider.rs  execution.rs  fingerprint.rs  lib.rs  maintenance.rs  manifest.rs  manifest_sidecar.rs  refactor_protocol.rs  repair.rs  runner.rs  runtime_helper.rs  self_check.rs  setup_env.rs  summary.rs  tests.rs  update_check.rs  validation.rs
crates/homeboy-finding/: Cargo.toml
crates/homeboy-fuzz/: Cargo.toml
crates/homeboy-fuzz/src/: artifact_envelope.rs  contract.rs  coverage.rs  coverage_reconciliation_persistence.rs  envelope.rs  lib.rs  parse.rs  result_envelope_persistence.rs  run_dir_writers.rs  (+3 more)
crates/homeboy-issues/: Cargo.toml
crates/homeboy-lab-contract/: Cargo.toml
crates/homeboy-lab-runner/: Cargo.toml
crates/homeboy-observation-contract/: Cargo.toml
crates/homeboy-output/: Cargo.toml
crates/homeboy-paths/: Cargo.toml
crates/homeboy-process/: Cargo.toml
crates/homeboy-product-identity/: Cargo.toml  build.rs
crates/homeboy-redaction/: Cargo.toml
crates/homeboy-refactor/: Cargo.toml
crates/homeboy-refactor-contract/: Cargo.toml
crates/homeboy-release/: Cargo.toml
crates/homeboy-review/: Cargo.toml
crates/homeboy-rig/: Cargo.toml
crates/homeboy-rig-contract/: Cargo.toml
crates/homeboy-runner-contract/: Cargo.toml
(+4397 files in other folders)
