[workspace]
# Internal crates split out of the homeboy monolith to gain per-crate
# incremental compilation and lower peak build memory. They are path-only
# dependencies of the `homeboy` crate. The entire workspace is private; the
# shipped CLI artifact remains the single `homeboy` binary.
members = ["crates/*"]

[package]
name = "homeboy"
version = "0.288.0"
edition = "2021"
default-run = "homeboy"
license = "MIT"
authors = ["Chris Huber <chubes@extrachill.com>"]
description = "Headless automation for agentic software engineering workflows"
repository = "https://github.com/Extra-Chill/homeboy"
homepage = "https://github.com/Extra-Chill/homeboy"
exclude = ["/artifacts/"]
publish = false

[lib]
name = "homeboy"
path = "src/lib.rs"

[[bin]]
name = "homeboy"
path = "src/main.rs"

# Bench binaries follow the homeboy-extensions/rust convention:
# any [[bin]] whose name starts with `bench-` is discoverable by
# `homeboy bench homeboy`. See src/bin/bench-*.rs for the workload
# contract (reads HOMEBOY_BENCH_ITERATIONS, emits timings plus optional memory evidence).
[[bin]]
name = "bench-audit-self"
path = "src/bin/bench-audit-self.rs"

[dependencies]
# Private workspace crates shipped only in the Homeboy binary.
homeboy-cli-contract = { path = "crates/homeboy-cli-contract" }
homeboy-error = { path = "crates/homeboy-error" }
homeboy-finding = { path = "crates/homeboy-finding" }
homeboy-output = { path = "crates/homeboy-output" }
homeboy-paths = { path = "crates/homeboy-paths" }
homeboy-process = { path = "crates/homeboy-process" }
homeboy-product-identity = { path = "crates/homeboy-product-identity" }
homeboy-engine-primitives = { path = "crates/homeboy-engine-primitives" }
homeboy-cli = { path = "crates/homeboy-cli" }
homeboy-core = { path = "crates/homeboy-core" }
homeboy-lab-contract = { path = "crates/homeboy-lab-contract" }
homeboy-redaction = { path = "crates/homeboy-redaction" }

# Core library dependencies
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1"
serde_yml = "0.0.12"
heck = "0.5"
uuid = { version = "1.11", features = ["v4", "v5", "serde"] }
shellexpand = "3.1"
regex = "1.11"
glob-match = "0.2"
glob = "0.3"
zip = "0.6"
keyring = { version = "3.6", features = ["apple-native"] }
core-foundation-sys = "0.8"
security-framework-sys = "2.17"
# default-features disabled to drop reqwest's `default-tls` (native-tls/openssl),
# which pulled a second, redundant TLS stack alongside the rustls-tls we actually use.
# Kept features cover current usage (blocking JSON client, socks proxy, http2, charset,
# system proxy).
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls", "socks", "http2", "charset", "system-proxy"] }
chrono = "0.4"
ctrlc = "3.4"
semver = "1.0"
libc = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json_path = "0.7"
tempfile = "3.14"

# CLI dependencies
clap = { version = "4.5", features = ["derive", "string"] }
toml = "1.0.3"
sha2 = "0.10.9"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO"] }

[dev-dependencies]
# Enable homeboy-core's shared hermetic test fixtures for this crate's test build
# (integration tests reach them via `homeboy::test_support`).
homeboy-core = { version = "0.1.0", path = "crates/homeboy-core", features = ["test-support"] }

[features]
default = []
slow-tests = []
# Enables the shared hermetic test fixtures (homeboy-core's test_support), used by
# this crate's integration tests.
test-support = ["homeboy-core/test-support"]

[profile.dist]
inherits = "release"
lto = "thin"
