[workspace]
# Internal crates split out of the homeboy monolith to gain per-crate
# incremental compilation and lower peak build memory. They are path-only
# dependencies of the `homeboy` crate. The entire workspace is private; the
# shipped CLI artifact remains the single `homeboy` binary.
members = ["crates/*", "crates/contracts/*"]
# `crates/*` also globs the `crates/contracts` grouping directory, which is not
# itself a crate; exclude it so only the contract crates under it are members.
exclude = ["crates/contracts"]

[package]
name = "homeboy"
version = "0.308.0"
edition = "2021"
default-run = "homeboy"
license = "MIT"
authors = ["Chris Huber <chubes@extrachill.com>"]
description = "Headless automation for agentic software engineering workflows"
repository = "https://github.com/Extra-Chill/homeboy"
homepage = "https://github.com/Extra-Chill/homeboy"
exclude = ["/artifacts/"]
publish = false

[package.metadata.dist]
dist = true

[package.metadata.cargo-machete]
ignored = ["homeboy-lab-contract"] # Required as a direct edge by release preflight.

[lib]
name = "homeboy"
path = "src/lib.rs"

[[bin]]
name = "homeboy"
path = "src/main.rs"

# Bench binaries follow the homeboy-extensions/rust convention:
# any [[bin]] whose name starts with `bench-` is discoverable by
# `homeboy bench homeboy`. See src/bin/bench-*.rs for the workload
# contract (reads HOMEBOY_BENCH_ITERATIONS, emits timings plus optional memory evidence).
[[bin]]
name = "bench-audit-self"
path = "src/bin/bench-audit-self.rs"

[dependencies]
homeboy-product-identity = { path = "crates/homeboy-product-identity" }
homeboy-cli = { path = "crates/homeboy-cli" }
homeboy-core = { path = "crates/homeboy-core" }
homeboy-lab-contract = { path = "crates/contracts/homeboy-lab-contract" }

# Core library dependencies
base64 = "0.22"
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4", "v5", "serde"] }
# default-features disabled to drop reqwest's `default-tls` (native-tls/openssl),
# which pulled a second, redundant TLS stack alongside the rustls-tls we actually use.
# Kept features cover current usage (blocking JSON client, socks proxy, http2, charset,
# system proxy).
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls", "socks", "http2", "charset", "system-proxy"] }
chrono = "0.4"
libc = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
tempfile = "3.14"

# CLI dependencies
clap = { version = "4.5", features = ["derive", "string"] }

[dev-dependencies]
# Enable homeboy-core's shared hermetic test fixtures for this crate's test build
# (integration tests reach them via `homeboy::test_support`).
homeboy-core = { version = "0.1.0", path = "crates/homeboy-core", features = ["test-support"] }
homeboy-extension = { version = "0.1.0", path = "crates/homeboy-extension" }

[features]
default = []
slow-tests = []
# Enables the shared hermetic test fixtures (homeboy-core's test_support), used by
# this crate's integration tests.
test-support = ["homeboy-core/test-support"]

[profile.dist]
inherits = "release"
lto = "thin"
