[package]
name = "homeboy-audit-contract"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Chris Huber <chubes@extrachill.com>"]
description = "Shared audit configuration schema for homeboy: detector profiles, source policies, and per-detector config types read from homeboy.json and consumed by the code_audit engine."
repository = "https://github.com/Extra-Chill/homeboy"
publish = false

[lib]
name = "homeboy_audit_contract"
path = "src/lib.rs"

[dependencies]
homeboy-engine-primitives = { version = "0.1.0", path = "../homeboy-engine-primitives" }
homeboy-finding = { version = "0.1.0", path = "../homeboy-finding" }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
