[package]
name = "homeboy-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Chris Huber <chubes@extrachill.com>"]
description = "CLI layer for homeboy: command dispatch, clap surface, command contract, and runtime wiring"
repository = "https://github.com/Extra-Chill/homeboy"
publish = false
build = "build.rs"

[lib]
name = "homeboy_cli"
path = "src/lib.rs"

[dependencies]
homeboy-core = { version = "0.1.0", path = "../homeboy-core" }
homeboy-release = { version = "0.1.0", path = "../homeboy-release" }
homeboy-stack = { version = "0.1.0", path = "../homeboy-stack" }
homeboy-review = { version = "0.1.0", path = "../homeboy-review" }
homeboy-upgrade = { version = "0.1.0", path = "../homeboy-upgrade" }
homeboy-agents = { version = "0.1.0", path = "../homeboy-agents" }
homeboy-refactor = { version = "0.1.0", path = "../homeboy-refactor" }
homeboy-rig = { version = "0.1.0", path = "../homeboy-rig" }
homeboy-refactor-contract = { version = "0.1.0", path = "../homeboy-refactor-contract" }
homeboy-lab-runner = { version = "0.1.0", path = "../homeboy-lab-runner" }
homeboy-fuzz = { version = "0.1.0", path = "../homeboy-fuzz" }
homeboy-issues = { version = "0.1.0", path = "../homeboy-issues" }
homeboy-triage = { version = "0.1.0", path = "../homeboy-triage" }
homeboy-tunnel = { version = "0.1.0", path = "../homeboy-tunnel" }
homeboy-cli-contract = { version = "0.1.0", path = "../homeboy-cli-contract" }
homeboy-error = { version = "0.1.0", path = "../homeboy-error" }
homeboy-finding = { version = "0.1.0", path = "../homeboy-finding" }
homeboy-output = { version = "0.1.0", path = "../homeboy-output" }
homeboy-paths = { version = "0.1.0", path = "../homeboy-paths" }
homeboy-process = { version = "0.1.0", path = "../homeboy-process" }
homeboy-product-identity = { version = "0.1.0", path = "../homeboy-product-identity" }
homeboy-engine-primitives = { version = "0.1.0", path = "../homeboy-engine-primitives" }
homeboy-lab-contract = { version = "0.1.0", path = "../homeboy-lab-contract" }
homeboy-redaction = { version = "0.1.0", path = "../homeboy-redaction" }
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1"
serde_yml = "0.0.12"
heck = "0.5"
uuid = { version = "1.11", features = ["v4", "v5", "serde"] }
shellexpand = "3.1"
regex = "1.11"
glob-match = "0.2"
glob = "0.3"
zip = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls", "socks", "http2", "charset", "system-proxy"] }
chrono = "0.4"
ctrlc = "3.4"
semver = "1.0"
libc = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json_path = "0.7"
tempfile = "3.14"
clap = { version = "4.5", features = ["derive", "string"] }
toml = "1.0.3"
sha2 = "0.10.9"

[dev-dependencies]
# Enable homeboy-core's shared hermetic test fixtures for this crate's test build.
homeboy-core = { version = "0.1.0", path = "../homeboy-core", features = ["test-support"] }
homeboy-agents = { version = "0.1.0", path = "../homeboy-agents", features = ["test-support"] }
