[package]
name = "homeboy-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Chris Huber <chubes@extrachill.com>"]
description = "Core engine for homeboy: build/deploy/test/triage orchestration, runners, agent-task, code audit, and evidence"
repository = "https://github.com/Extra-Chill/homeboy"
publish = false

[lib]
name = "homeboy_core"
path = "src/lib.rs"

[features]
# Exposes the shared hermetic test-support fixtures (test_support module and the
# cache-reset helpers it needs) to other crates' test builds. Enabled as a
# dev-dependency feature by the CLI and feature crates; never in production.
test-support = []
slow-tests = []

[dependencies]
homeboy-cli-contract = { version = "0.1.0", path = "../homeboy-cli-contract" }
homeboy-error = { version = "0.1.0", path = "../homeboy-error" }
homeboy-finding = { version = "0.1.0", path = "../homeboy-finding" }
homeboy-output = { version = "0.1.0", path = "../homeboy-output" }
homeboy-paths = { version = "0.1.0", path = "../homeboy-paths" }
homeboy-process = { version = "0.1.0", path = "../homeboy-process" }
homeboy-product-identity = { version = "0.1.0", path = "../homeboy-product-identity" }
homeboy-audit-contract = { version = "0.1.0", path = "../homeboy-audit-contract" }
homeboy-extension-contract = { version = "0.1.0", path = "../homeboy-extension-contract" }
homeboy-engine-primitives = { version = "0.1.0", path = "../homeboy-engine-primitives" }
homeboy-lab-contract = { version = "0.1.0", path = "../homeboy-lab-contract" }
homeboy-runner-contract = { version = "0.1.0", path = "../homeboy-runner-contract" }
homeboy-redaction = { version = "0.1.0", path = "../homeboy-redaction" }
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1"
serde_yml = "0.0.12"
heck = "0.5"
uuid = { version = "1.11", features = ["v4", "v5", "serde"] }
shellexpand = "3.1"
regex = "1.11"
glob-match = "0.2"
glob = "0.3"
zip = "0.6"
keyring = { version = "3.6", features = ["apple-native"] }
core-foundation-sys = "0.8"
security-framework-sys = "2.17"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls", "socks", "http2", "charset", "system-proxy"] }
chrono = "0.4"
ctrlc = "3.4"
semver = "1.0"
libc = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json_path = "0.7"
tempfile = "3.14"
clap = { version = "4.5", features = ["derive", "string"] }
toml = "1.0.3"
sha2 = "0.10.9"
