[package]
name = "homeboy-engine-primitives"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Chris Huber <chubes@extrachill.com>"]
description = "Low-level execution primitives (shell, command, text, run_dir, template, output parsing, identifiers) for homeboy"
repository = "https://github.com/Extra-Chill/homeboy"
publish = false

[lib]
name = "homeboy_engine_primitives"
path = "src/lib.rs"

[dependencies]
homeboy-error = { version = "0.1.0", path = "../homeboy-error" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11"
libc = "0.2"
