[package]
name = "homeboy-error"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Chris Huber <chubes@extrachill.com>"]
description = "Structured error types, error codes, and result alias for homeboy"
repository = "https://github.com/Extra-Chill/homeboy"
publish = false

[lib]
name = "homeboy_error"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
