[package]
name = "homeboy-extension-contract"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Chris Huber <chubes@extrachill.com>"]
description = "Pure serializable data types for the homeboy extension system (manifest/deploy/test/sidecar config contracts)"
repository = "https://github.com/Extra-Chill/homeboy"
publish = false

[lib]
name = "homeboy_extension_contract"
path = "src/lib.rs"

[dependencies]
homeboy-error = { version = "0.1.0", path = "../homeboy-error" }
homeboy-audit-contract = { version = "0.1.0", path = "../homeboy-audit-contract" }
homeboy-product-identity = { version = "0.1.0", path = "../homeboy-product-identity" }
homeboy-engine-primitives = { version = "0.1.0", path = "../homeboy-engine-primitives" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = "1.0"
