[package]
name = "homeboy-finding"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Chris Huber <chubes@extrachill.com>"]
description = "Structured finding/diagnostic types for homeboy audit and review output"
repository = "https://github.com/Extra-Chill/homeboy"

[lib]
name = "homeboy_finding"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
