[package]
name = "homeboy-lab-contract"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Chris Huber <chubes@extrachill.com>"]
description = "Shared Lab/runner contract types for homeboy (workload, handoff, env/secret/path materialization plans)"
repository = "https://github.com/Extra-Chill/homeboy"
publish = false

[lib]
name = "homeboy_lab_contract"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
homeboy-error = { version = "0.1.0", path = "../homeboy-error" }
homeboy-redaction = { version = "0.1.0", path = "../homeboy-redaction" }
