[package]
name = "homeboy-output"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Chris Huber <chubes@extrachill.com>"]
description = "Structured bulk-operation result and output aggregation types for homeboy"
repository = "https://github.com/Extra-Chill/homeboy"
publish = false

[lib]
name = "homeboy_output"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
