[package]
name = "homeboy-release"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Release + deploy subsystem for homeboy: build/ship components (deploy) and versioning/changelog/tagging/GitHub releases (release). Mutually dependent, so one crate. Depends on homeboy-core; core does not depend on it (reaches it via the release_provider hook)."
publish = false

[lib]
name = "homeboy_release"
path = "src/lib.rs"

[dependencies]
homeboy-core = { version = "0.1.0", path = "../homeboy-core" }
homeboy-extension = { version = "0.1.0", path = "../homeboy-extension" }
homeboy-release-contract = { version = "0.1.0", path = "../contracts/homeboy-release-contract" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11"
zip = "0.6"
chrono = "0.4"
semver = "1.0"
tempfile = "3.14"
sha2 = "0.10.9"
glob = "0.3"
glob-match = "0.2"
uuid = { version = "1.11", features = ["v4", "v5", "serde"] }
homeboy-product-identity = { version = "0.1.0", path = "../homeboy-product-identity" }

[dev-dependencies]
homeboy-core = { version = "0.1.0", path = "../homeboy-core", features = ["test-support"] }
